// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Allow load custom resources md2html with metadata 1`] = `"["_bundle/app.css","_bundle/app.js","_bundle/react.js","_bundle/vendor.css","_bundle/vendor.js","index.html","page.html","project/config.html"]"`;

exports[`Allow load custom resources md2html with metadata 2`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="test-yfm"
          content="inline test"
    >
    <meta name="yfm-config"
          content="config test"
    >
    <meta name="title"
          content="Documentation"
    >
    <meta name="noIndex"
          content="true"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation | Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/vendor.css"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app.css"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":true,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"},{"name":"Config","href":"project/config.html","id":"Config-RANDOM"}],"base":".","deepBase":0},"data":{"title":"Documentation","description":"","meta":{"title":"Documentation","noIndex":true,"metadata":[{"name":"test-yfm","content":"inline test"},{"name":"yfm-config","content":"config test"}],"style":[],"script":[]},"links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"title":"Documentation","noIndex":true,"metadata":[{"name":"test-yfm","content":"inline test"},{"name":"yfm-config","content":"config test"}],"style":[],"script":[]}},"router":{"pathname":"index.html"},"lang":"ru","langs":["ru"]};
    </script>
    <script type="application/javascript"
            src="_bundle/react.js"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app.js"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/vendor.js"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html with metadata 3`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="./">
    <meta name="yfm"
          value="builder in page"
    >
    <meta name="test-yfm"
          content="inline test"
    >
    <meta name="yfm-config"
          content="config test"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/vendor.css"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app.css"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"},{"name":"Config","href":"project/config.html","id":"Config-RANDOM"}],"base":".","deepBase":0},"meta":{"metadata":[{"name":"yfm","value":"builder in page"},{"name":"test-yfm","content":"inline test"},{"name":"yfm-config","content":"config test"}],"style":[],"script":[]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>Lorem
      </p>/n"},"router":{"pathname":"page.html"},"lang":"ru","langs":["ru"]};
    </script>
    <script type="application/javascript"
            src="_bundle/react.js"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app.js"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/vendor.js"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2html with metadata 4`] = `
<!DOCTYPE html>
<html lang="ru"
      dir="ltr"
>
  <head>
    <meta charset="utf-8">
    <base href="../">
    <meta name="yfm"
          value="builder in config"
    >
    <meta name="test-yfm"
          content="inline test"
    >
    <meta name="yfm-config"
          content="config test"
    >
    <meta name="viewport"
          content="width=device-width, initial-scale=1.0"
    >
    <title>
      Documentation
    </title>
    <style type="text/css">
      body {
                        height: 100vh;
                    }
    </style>
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/vendor.css"
    >
    <link type="text/css"
          rel="stylesheet"
          href="_bundle/app.css"
    >
  </head>
  <body class="g-root g-root_theme_light">
    <div id="root">
    </div>
    <script type="application/javascript">
      window.STATIC_CONTENT = false
                   window.__DATA__ = {"data":{"leading":false,"toc":{"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"Documentation-RANDOM"},{"name":"Config","href":"project/config.html","id":"Config-RANDOM"}],"base":".","deepBase":0},"meta":{"metadata":[{"name":"yfm","value":"builder in config"},{"name":"test-yfm","content":"inline test"},{"name":"yfm-config","content":"config test"}],"style":[],"script":[]},"assets":[],"headings":[],"title":"","includes":[],"html":"
      <p>Lorem
      </p>/n"},"router":{"pathname":"project/config.html"},"lang":"ru","langs":["ru"]};
    </script>
    <script type="application/javascript"
            src="_bundle/react.js"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/app.js"
    >
    </script>
    <script type="application/javascript"
            src="_bundle/vendor.js"
    >
    </script>
  </body>
</html>
`;

exports[`Allow load custom resources md2md with metadata 1`] = `"["index.yaml","page.md","project/config.md","toc.yaml"]"`;

exports[`Allow load custom resources md2md with metadata 2`] = `
"title: Documentation
description: ''
meta:
  title: Documentation
  noIndex: true
links:
  - title: Getting started with Documentation
    description: This guide will show you the basics of working with Documentation
    href: page.md
"
`;

exports[`Allow load custom resources md2md with metadata 3`] = `
"---
metadata:
  - name: yfm
    content: builder in page
  - name: test-yfm
    content: inline test
  - name: yfm-config
    content: config test
---

Lorem"
`;

exports[`Allow load custom resources md2md with metadata 4`] = `
"---
metadata:
  - name: yfm
    value: builder in config
  - name: test-yfm
    content: inline test
  - name: yfm-config
    content: config test
---

Lorem"
`;

exports[`Allow load custom resources md2md with metadata 5`] = `
"title: Documentation
href: index.yaml
items:
  - name: Documentation
    href: page.md
  - name: Config
    href: project/config.md
base: .
deepBase: 0
"
`;
